--- a/Riksantikvarieämbetet RAÄ Evighetsrunor.ipynb
+++ b/Riksantikvarieämbetet RAÄ Evighetsrunor.ipynb
@@ -1544,11 +1544,488 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Rundata\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11671 entries, 0 to 11670\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                     Non-Null Count  Dtype \n",
+      "---  ------                     --------------  ----- \n",
+      " 0   Signum                     11671 non-null  object\n",
+      " 1   Plats                      6622 non-null   object\n",
+      " 2   Socken                     6412 non-null   object\n",
+      " 3   Härad                      5530 non-null   object\n",
+      " 4   Kommun                     6399 non-null   object\n",
+      " 5   Placering                  3766 non-null   object\n",
+      " 6   Koordinater                5198 non-null   object\n",
+      " 7   Urspr. plats?              1101 non-null   object\n",
+      " 8   Nuv. koord.                501 non-null    object\n",
+      " 9   Sockenkod/Fornlämningsnr.  4592 non-null   object\n",
+      " 10  Runtyper                   333 non-null    object\n",
+      " 11  Korsform                   1119 non-null   object\n",
+      " 12  Period/Datering            6748 non-null   object\n",
+      " 13  Stilgruppering             2587 non-null   object\n",
+      " 14  Ristare                    1070 non-null   object\n",
+      " 15  Materialtyp                6749 non-null   object\n",
+      " 16  Material                   5389 non-null   object\n",
+      " 17  Föremål                    6745 non-null   object\n",
+      " 18  Övrigt                     2160 non-null   object\n",
+      " 19  Alternativt signum         2522 non-null   object\n",
+      " 20  Referens                   3746 non-null   object\n",
+      " 21  Bildlänk                   1493 non-null   object\n",
+      "dtypes: object(22)\n",
+      "memory usage: 2.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "rundatadf = pd.read_excel(\"data/RUNDATA.xls\")\n",
+    "\n",
+    "rundatadf.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Signum</th>\n",
+       "      <th>Plats</th>\n",
+       "      <th>Socken</th>\n",
+       "      <th>Härad</th>\n",
+       "      <th>Kommun</th>\n",
+       "      <th>Placering</th>\n",
+       "      <th>Koordinater</th>\n",
+       "      <th>Urspr. plats?</th>\n",
+       "      <th>Nuv. koord.</th>\n",
+       "      <th>Sockenkod/Fornlämningsnr.</th>\n",
+       "      <th>Runtyper</th>\n",
+       "      <th>Korsform</th>\n",
+       "      <th>Period/Datering</th>\n",
+       "      <th>Stilgruppering</th>\n",
+       "      <th>Ristare</th>\n",
+       "      <th>Materialtyp</th>\n",
+       "      <th>Material</th>\n",
+       "      <th>Föremål</th>\n",
+       "      <th>Övrigt</th>\n",
+       "      <th>Alternativt signum</th>\n",
+       "      <th>Referens</th>\n",
+       "      <th>Bildlänk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5118</th>\n",
+       "      <td>N 34 $M</td>\n",
+       "      <td>Lom kirke</td>\n",
+       "      <td>Lom sn</td>\n",
+       "      <td>Oppland fylke</td>\n",
+       "      <td>Lom</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(61.839737 ; 8.566154)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>trä</td>\n",
+       "      <td>trä</td>\n",
+       "      <td>stavkyrkegrafitti</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$=NOR 1992:13, http://urn.nb.no/URN:NBN:no-44909</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10234</th>\n",
+       "      <td>L 492 =U_325</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7143</th>\n",
+       "      <td>IS IR;73 $M</td>\n",
+       "      <td>Útskálar kyrka</td>\n",
+       "      <td>Útskálar sn</td>\n",
+       "      <td>Gullbringu sýsla</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Þjóðminjasafn (nr. 10927)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M 1400-t?</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>sten</td>\n",
+       "      <td>lava</td>\n",
+       "      <td>gravhäll</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$=RunaIslandi1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5004</th>\n",
+       "      <td>DR MS1995;336B U</td>\n",
+       "      <td>Illerup</td>\n",
+       "      <td>Skanderup sn</td>\n",
+       "      <td>Hjelmslev hd, Nørrejylland</td>\n",
+       "      <td>Skanderborg</td>\n",
+       "      <td>Forhistorisk museum Moesgård (FHM 1880 TWR)</td>\n",
+       "      <td>(56.055 ; 9.900)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>160208-141 [Lokalitet/167428]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>U 210/220-250/260</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>metall</td>\n",
+       "      <td>silver</td>\n",
+       "      <td>sköldhandtagsbeslag</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DK nr.: MJy 86, http://runer.ku.dk/VisGenstand...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7716</th>\n",
+       "      <td>DK Fyn19 =DR_207</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6633</th>\n",
+       "      <td>N B327 M</td>\n",
+       "      <td>Bryggen, Bergen</td>\n",
+       "      <td>Bergen</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bergen</td>\n",
+       "      <td>BRM 0/31188</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>trä</td>\n",
+       "      <td>trä</td>\n",
+       "      <td>pinne</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www.nb.no/baser/runer/runebilder/b327.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5964</th>\n",
+       "      <td>N 881 =N_A174</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Manus till NIyR bind 7 av J.R. Hagland</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1021</th>\n",
+       "      <td>Sö 298</td>\n",
+       "      <td>Uringe malm</td>\n",
+       "      <td>Grödinge sn</td>\n",
+       "      <td>Svartlösa hd</td>\n",
+       "      <td>Botkyrka</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6558193.1620687</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0024 (Grödinge), 226 [objektid=10002402260001]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A2; B1; 0; D1; E9; F3; 0</td>\n",
+       "      <td>V</td>\n",
+       "      <td>Pr3</td>\n",
+       "      <td>Halvdan (A)</td>\n",
+       "      <td>sten</td>\n",
+       "      <td>gnejs</td>\n",
+       "      <td>runsten</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10523</th>\n",
+       "      <td>L 785 =U_1157</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7696</th>\n",
+       "      <td>DK Syd16 =DR_DKSyd16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Signum  ...                                          Bildlänk\n",
+       "5118                N 34 $M   ...                                               NaN\n",
+       "10234          L 492 =U_325   ...                                               NaN\n",
+       "7143            IS IR;73 $M   ...                                               NaN\n",
+       "5004       DR MS1995;336B U   ...                                               NaN\n",
+       "7716       DK Fyn19 =DR_207   ...                                               NaN\n",
+       "...                      ...  ...                                               ...\n",
+       "6633               N B327 M   ...  http://www.nb.no/baser/runer/runebilder/b327.jpg\n",
+       "5964          N 881 =N_A174   ...                                               NaN\n",
+       "1021                Sö 298    ...                                               NaN\n",
+       "10523         L 785 =U_1157   ...                                               NaN\n",
+       "7696   DK Syd16 =DR_DKSyd16   ...                                               NaN\n",
+       "\n",
+       "[100 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rundatadf.sample(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Trondheim                                 177\n",
+       "Sigtuna                                   141\n",
+       "Köpings sn                                 87\n",
+       "Lund                                       82\n",
+       "Hovs sn                                    68\n",
+       "Oslo                                       68\n",
+       "?                                          60\n",
+       "Sankt Peders sn                            52\n",
+       "Borgund sn                                 50\n",
+       "Uppsala                                    48\n",
+       "Vallentuna sn                              43\n",
+       "Täby sn                                    39\n",
+       "Bälinge sn                                 38\n",
+       "Skånela sn                                 37\n",
+       "Tønsberg                                   36\n",
+       "Hammarby sn                                36\n",
+       "Spånga sn                                  35\n",
+       "Skänninge                                  34\n",
+       "Lom sn                                     32\n",
+       "Stadt Schleswig                            29\n",
+       "Eds sn                                     29\n",
+       "Väversunda sn                              27\n",
+       "Solvorn sn                                 26\n",
+       "Vik sn                                     25\n",
+       "Össeby-Garns sn                            25\n",
+       "Hulterstads sn                             23\n",
+       "Linköping                                  22\n",
+       "Sorunda sn                                 22\n",
+       "Norrsunda sn                               21\n",
+       "Skepptuna sn                               21\n",
+       "Adelsö sn                                  20\n",
+       "Fresta sn                                  20\n",
+       "Runtuna sn                                 20\n",
+       "Husby-Lyhundra sn (nu Husby-Sjuhundra)     20\n",
+       "Stoby sn                                   19\n",
+       "Österhaninge sn                            19\n",
+       "Balingsta sn                               18\n",
+       "Odensala sn                                18\n",
+       "Bykle sn                                   18\n",
+       "Kaupanger sn                               18\n",
+       "Skoklosters sn                             18\n",
+       "Björklinge sn                              17\n",
+       "Vaksala sn                                 16\n",
+       "Åhus sn                                    16\n",
+       "Högby sn                                   15\n",
+       "Skuttunge sn                               15\n",
+       "Funbo sn                                   14\n",
+       "Ytterselö sn                               14\n",
+       "Stockholm                                  14\n",
+       "Name: Socken, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rundatadf[\"Sockenkod/Fornlämningsnr.\"].value_counts()[1:50]  \n",
+    "rundatadf[\"Signum\"].value_counts()[1:50]  \n",
+    "rundatadf[\"Plats\"].value_counts()[1:50]  \n",
+    "rundatadf[\"Socken\"].value_counts()[1:50]  \n"
+   ]
   },
   {
    "cell_type": "code",
