--- a/Riksantikvarieämbetet RAÄ Evighetsrunor.ipynb
+++ b/Riksantikvarieämbetet RAÄ Evighetsrunor.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Riksantikvarieämbetet RAÄ -  Evighetsrunor \n",
+    "## Riksantikvarieämbetet RAÄ -  K-samsök - Evighetsrunor \n",
     "version 1.301\n",
     "\n",
     "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksantikvarie%C3%A4mbetet%20RA%C3%84%20Evighetsrunor.ipynb)\n",
@@ -14,7 +14,7 @@
     "* get KSAMSÖK data [see API](https://www.raa.se/hitta-information/k-samsok/att-anvanda-k-samsok/metoder/)\n",
     "  * example [xml](http://www.kulturarvsdata.se/ksamsok/api?method=search&hitsPerPage=2&query=serviceName=%22srdb%22&startRecord=1)  \n",
     "  * supported fields?!?! itemDescription,itemLabel,lon,lat\n",
-    "    * missing fields in this data \n",
+    "    * missing fields in this data see \n",
     "      * carver e.g. [Fot 2](https://app.raa.se/open/runor/search_results?key=carver&id=e8c2b0b6-4b1e-4ba4-a163-f5e101802618), [Ärnfast](https://app.raa.se/open/runor/search_results?key=carver&id=0d4390a7-c962-4ba7-af3c-22b7764709e0), [Torgöt Fotsarve](https://app.raa.se/open/runor/search_results?key=carver&id=ad81d51d-1ab9-4660-8097-6ba52aa0176b), [Balle](https://app.raa.se/open/runor/search_results?key=carver&id=473cf687-cd94-4128-b195-21d01e747854), [Arbjörn](https://app.raa.se/open/runor/search_results?key=carver&id=0fb56c0f-1f97-4d70-bed9-d88af20be02f), [Öpir 1](https://app.raa.se/open/runor/search_results?key=carver&id=2a1cf645-91fa-47a6-b904-5b8b56b95fb3)\n",
     "      * material e.g. [granit](https://app.raa.se/open/runor/search_results?key=material&id=fa61cddc-97a8-4dd8-9333-e4f359c090da), [rödgnejsgranit](https://app.raa.se/open/runor/search_results?key=material&id=bee1a5c1-6ead-4a15-8c8d-740e7159a970), [sten](https://app.raa.se/open/runor/search_results?key=material&id=56f871f0-71e2-4e70-a2a6-530f63bb64ab), [mörk gnejs](https://app.raa.se/open/runor/search_results?key=material&id=b3502e49-3624-45fa-98dd-3202ba5a4d92), [ljus gnejsgranit](https://app.raa.se/open/runor/search_results?key=material&id=525b6580-c65a-47fc-88a2-ccc2b576ce3d), [rödgrå granit](https://app.raa.se/open/runor/search_results?key=material&id=ff332544-6da3-48f9-90c2-25b4060336e8), [blågrå granit](https://app.raa.se/open/runor/search_results?key=material&id=1c779a8f-e34a-41d9-b066-99a47f095eb8), [jotnisk sandsten](https://app.raa.se/open/runor/search_results?key=material&id=370c048e-1477-49c7-84c2-eb449488f012)....\n",
     "      * dating e.g. [Viking age](https://app.raa.se/open/runor/search_results?key=period&id=81fd003d-ee5a-407e-ac0e-aa8fbf6cf91c)...\n",
