--- a/Riksdagen P1214.ipynb
+++ b/Riksdagen P1214.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Riksdagen P1204  \n",
-    "version 2.0\n",
+    "version 2.1\n",
     "\n",
     "Egenskap i Wikidata som bör bytas till GUID P8388\n",
     "* [denna notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksdagen%20P1214.ipynb)\n",
@@ -4029,6 +4029,173 @@
     "#create file to update Wikidata with GUID \n",
     "#This file should be empty\n",
     "HTML(Riksdagen_intressent_id_only[{'WikidataID','sourceid'}].to_html(escape=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WikidataID</th>\n",
+       "      <th>WDriksdagenID</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>hangar_guid</th>\n",
+       "      <th>sourceid</th>\n",
+       "      <th>intressent_id</th>\n",
+       "      <th>hangar_id</th>\n",
+       "      <th>fodd_ar</th>\n",
+       "      <th>kon</th>\n",
+       "      <th>efternamn</th>\n",
+       "      <th>tilltalsnamn</th>\n",
+       "      <th>sorteringsnamn</th>\n",
+       "      <th>iort</th>\n",
+       "      <th>parti</th>\n",
+       "      <th>valkrets</th>\n",
+       "      <th>status</th>\n",
+       "      <th>person_url_xml</th>\n",
+       "      <th>bild_url_80</th>\n",
+       "      <th>bild_url_192</th>\n",
+       "      <th>bild_url_max</th>\n",
+       "      <th>personuppdrag</th>\n",
+       "      <th>personuppgift</th>\n",
+       "      <th>WDP1214_Riksdagen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Q1232072</td>\n",
+       "      <td>0553241385804</td>\n",
+       "      <td>PropertyP1214</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WDP1214_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Q5619080</td>\n",
+       "      <td>0631064113607</td>\n",
+       "      <td>PropertyP1214</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WDP1214_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Q5937929</td>\n",
+       "      <td>0818762925009</td>\n",
+       "      <td>PropertyP1214</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WDP1214_only</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  WikidataID  WDriksdagenID         Source hangar_guid sourceid intressent_id  \\\n",
+       "0   Q1232072  0553241385804  PropertyP1214         NaN      NaN           NaN   \n",
+       "1   Q5619080  0631064113607  PropertyP1214         NaN      NaN           NaN   \n",
+       "2   Q5937929  0818762925009  PropertyP1214         NaN      NaN           NaN   \n",
+       "\n",
+       "  hangar_id fodd_ar  kon efternamn tilltalsnamn sorteringsnamn iort parti  \\\n",
+       "0       NaN     NaN  NaN       NaN          NaN            NaN  NaN   NaN   \n",
+       "1       NaN     NaN  NaN       NaN          NaN            NaN  NaN   NaN   \n",
+       "2       NaN     NaN  NaN       NaN          NaN            NaN  NaN   NaN   \n",
+       "\n",
+       "  valkrets status person_url_xml bild_url_80 bild_url_192 bild_url_max  \\\n",
+       "0      NaN    NaN            NaN         NaN          NaN          NaN   \n",
+       "1      NaN    NaN            NaN         NaN          NaN          NaN   \n",
+       "2      NaN    NaN            NaN         NaN          NaN          NaN   \n",
+       "\n",
+       "  personuppdrag personuppgift WDP1214_Riksdagen  \n",
+       "0           NaN           NaN      WDP1214_only  \n",
+       "1           NaN           NaN      WDP1214_only  \n",
+       "2           NaN           NaN      WDP1214_only  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Maybe should be empty. We need to ask Riksdagen if they delete people,,, if not we have errors in WD or in this Notebook\n",
+    "Riksdagen_intressent_wd_only = mergeRiksdagenWDP214[mergeRiksdagenWDP214[\"WDP1214_Riksdagen\"] == \"WDP1214_only\"].copy() \n",
+    "Riksdagen_intressent_wd_only"
    ]
   },
   {
