--- a/Riksdagen P1214.ipynb
+++ b/Riksdagen P1214.ipynb
@@ -10,6 +10,7 @@
     "Egenskap i Wikidata som bör bytas till GUID P8388\n",
     "* [denna notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksdagen%20P1214.ipynb)\n",
     "  * video [20201216 om denna notebook](https://youtu.be/BK7Cx0-s7Oo)\n",
+    "  * Phabricator [T235521](https://phabricator.wikimedia.org/T235521)\n",
     "* [diskussion P1214](https://www.wikidata.org/wiki/Property_talk:P1214#Repair_needed) \n",
     "* egenskapsförslag [Wikidata:Property_proposal/Riksdagen_person_guid](https://www.wikidata.org/wiki/Wikidata:Property_proposal/Riksdagen_person_guid)\n",
     "* [Riksdagensdata 1991 poster](http://data.riksdagen.se/personlista/?iid=&fnamn=&enamn=&f_ar=&kn=&parti=&valkrets=&rdlstatus=samtliga&org=&utformat=json&sort=sorteringsnamn&sortorder=asc&termlista=) 2020 jun\n",
@@ -4033,7 +4034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4187,7 +4188,7 @@
        "2           NaN           NaN      WDP1214_only  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
