--- a/Riksdagen P1214.ipynb
+++ b/Riksdagen P1214.ipynb
@@ -4034,7 +4034,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Check WD if we have P8388 set but not P1214 GUID\n",
+    "## Check WD if we have P8388 GUID set but not old P1214 \n",
     "* as old documents use P1214 its make sense to have both\n",
     "* new created records seems to lack P1214 at Riksdagen"
    ]
