Update Check Corona Vaccination.ipynb

--- a/Check Corona Vaccination.ipynb
+++ b/Check Corona Vaccination.ipynb
@@ -16,7 +16,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last run:  2020-12-25 09:44:52.466671\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "start_time  = datetime.now()\n",
@@ -235,6 +243,70 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "Canada              10\n",
+       "United States        4\n",
+       "Israel               4\n",
+       "Russia               3\n",
+       "Scotland             2\n",
+       "United Kingdom       2\n",
+       "Bahrain              2\n",
+       "Wales                2\n",
+       "Northern Ireland     2\n",
+       "England              1\n",
+       "China                1\n",
+       "Name: location, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Countries in list\n",
+    "allCountries[\"location\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "location          vaccine                 \n",
+       "Bahrain           Sinopharm                    2\n",
+       "Canada            Pfizer/BioNTech             10\n",
+       "China             CNBG, Sinovac                1\n",
+       "England           Pfizer/BioNTech              1\n",
+       "Israel            Pfizer/BioNTech              4\n",
+       "Northern Ireland  Pfizer/BioNTech              2\n",
+       "Russia            Sputnik V                    3\n",
+       "Scotland          Pfizer/BioNTech              2\n",
+       "United Kingdom    Pfizer/BioNTech              2\n",
+       "United States     Moderna, Pfizer/BioNTech     4\n",
+       "Wales             Pfizer/BioNTech              2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "allCountries.groupby([\"location\", \"vaccine\"]).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -266,14 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -339,19 +404,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Bahrain</th>\n",
-       "      <td>50071</td>\n",
-       "      <td>Sinopharm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Canada</th>\n",
        "      <td>31736</td>\n",
        "      <td>Pfizer/BioNTech</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>China</th>\n",
-       "      <td>1000000</td>\n",
-       "      <td>CNBG, Sinovac</td>\n",
+       "      <th>Bahrain</th>\n",
+       "      <td>50071</td>\n",
+       "      <td>Sinopharm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Israel</th>\n",
@@ -369,6 +429,11 @@
        "      <td>Pfizer/BioNTech</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>China</th>\n",
+       "      <td>1000000</td>\n",
+       "      <td>CNBG, Sinovac</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>United States</th>\n",
        "      <td>1008025</td>\n",
        "      <td>Moderna, Pfizer/BioNTech</td>\n",
@@ -380,27 +445,27 @@
       "text/plain": [
        "                total_vaccinations                   vaccine\n",
        "location                                                    \n",
-       "Bahrain                      50071                 Sinopharm\n",
        "Canada                       31736           Pfizer/BioNTech\n",
-       "China                      1000000             CNBG, Sinovac\n",
+       "Bahrain                      50071                 Sinopharm\n",
        "Israel                      140000           Pfizer/BioNTech\n",
        "Russia                      200000                 Sputnik V\n",
        "United Kingdom              800000           Pfizer/BioNTech\n",
+       "China                      1000000             CNBG, Sinovac\n",
        "United States              1008025  Moderna, Pfizer/BioNTech"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "plotCountries"
+    "plotCountries.sort_values(by='total_vaccinations',ascending=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +476,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +527,7 @@
        "Name: total_vaccinations, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,15 +547,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-12-25 09:29:14.152511\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:03.189371\n"
+      "Ended:  2020-12-25 09:44:53.930888\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:01.464611\n"
      ]
     }
    ],
@@ -511,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
