--- a/Litteraturbanken Plats.ipynb
+++ b/Litteraturbanken Plats.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Litteraturbanken Author \n",
+    "# Litteraturbanken Plats \n",
     "version 0.10  \n",
     "\n",
     "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Plats.ipynb) /[nbviewer](https://nbviewer.jupyter.org/github/salgo60/open-data-examples/blob/master/Litteraturbanken%20Plats.ipynb)\n",
