--- a/Litteraturbanken Plats.ipynb
+++ b/Litteraturbanken Plats.ipynb
@@ -704,6 +704,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Q4952353    2\n",
+       "Q5615947    1\n",
+       "Q4941859    1\n",
+       "Q4990447    1\n",
+       "Q5808708    1\n",
+       "Name: wikidata_person_id, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.wikidata_person_id.value_counts() "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
